fixed photo size on mobile

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ h1 {
     background-color: white;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 360px) {
     .head-img {
         max-width: 50%;
         height: auto;
